apps/sure-finance/ingress-sure-finance-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sure-finance-tailscale
  namespace: sure-finance
  annotations:
    tailscale.com/proxy-group: homelab-ingress
spec:
  ingressClassName: tailscale
  rules:
    - host: sure-finance
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sure-finance-maybe-finance
                port:
                  number: 3000
  tls:
    - hosts:
        - sure
